objects/Opportunity_Split_Archive__b/Opportunity_Split_Archive__b.object-meta.xml
<CustomObject>
    <description>Stores historic data prior to disabling Opportunity Splits as a part of the Enterprise Territory Management project. Jira ticket SS-9954</description>
    <label>Opportunity Split Archive</label>
    <pluralLabel>Opportunity Split Archive</pluralLabel>
</CustomObject>