objects/Opportunity_Split_Archive__b/fields/Account_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Account_Level_3__c</fullName>
    <label>Account Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>