objects/Opportunity_Split_Archive__b/fields/CARR_Churn_ARR__c.field-meta.xml
<CustomField>
    <fullName>CARR_Churn_ARR__c</fullName>
    <label>CARR (Churn ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>