objects/Opportunity_Split_Archive__b/fields/CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Name__c</fullName>
    <label>CreatedBy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>