objects/Opportunity_Split_Archive__b/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>CreatedById</label>
    <length>18</length>
    <type>Text</type>
</CustomField>