objects/Opportunity_Split_Archive__b/fields/Day_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Day_1_ARR__c</fullName>
    <label>Day 1 ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>