objects/Opportunity_Split_Archive__b/fields/HasOpportunityLineItemSplit__c.field-meta.xml
<CustomField>
    <fullName>HasOpportunityLineItemSplit__c</fullName>
    <label>HasOpportunityLineItemSplit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>