objects/Opportunity_Split_Archive__b/fields/Incoming_ARR__c.field-meta.xml
<CustomField>
    <fullName>Incoming_ARR__c</fullName>
    <label>Incoming ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>