objects/Opportunity_Split_Archive__b/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <label>LastModifiedById</label>
    <length>18</length>
    <type>Text</type>
</CustomField>