objects/Opportunity_Split_Archive__b/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>