objects/Opportunity_Split_Archive__b/fields/Name_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Name_Percentage__c</fullName>
    <label>Name &amp; Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>