objects/Opportunity_Split_Archive__b/fields/NARR_New_ARR__c.field-meta.xml
<CustomField>
    <fullName>NARR_New_ARR__c</fullName>
    <label>NARR (New ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>