objects/Opportunity_Split_Archive__b/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <label>Opportunity Close Date</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>