objects/Opportunity_Split_Archive__b/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <label>Opportunity StageName</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>