objects/Opportunity_Split_Archive__b/fields/Oppty_Link__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Link__c</fullName>
    <label>Opportunity Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>