objects/Opportunity_Split_Archive__b/fields/Proposed__c.field-meta.xml
<CustomField>
    <fullName>Proposed__c</fullName>
    <label>Proposed %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>