objects/Opportunity_Split_Archive__b/fields/RARR_Renewed_ARR__c.field-meta.xml
<CustomField>
    <fullName>RARR_Renewed_ARR__c</fullName>
    <label>RARR (Renewed ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>