objects/Opportunity_Split_Archive__b/fields/Reviewed_by_Sales_Ops__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Sales_Ops__c</fullName>
    <label>Reviewed by Sales Ops</label>
    <length>10</length>
    <type>Text</type>
</CustomField>