objects/Opportunity_Split_Archive__b/fields/SplitAmount__c.field-meta.xml
<CustomField>
    <fullName>SplitAmount__c</fullName>
    <label>SplitAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>