objects/Opportunity_Split_Archive__b/fields/SplitID__c.field-meta.xml
<CustomField>
    <fullName>SplitID__c</fullName>
    <label>SplitID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>