objects/Opportunity_Split_Archive__b/fields/SplitName__c.field-meta.xml
<CustomField>
    <fullName>SplitName__c</fullName>
    <label>SplitName</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>