objects/Opportunity_Split_Archive__b/fields/SplitNote__c.field-meta.xml
<CustomField>
    <fullName>SplitNote__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>