objects/Opportunity_Split_Archive__b/fields/SplitOwnerID__c.field-meta.xml
<CustomField>
    <fullName>SplitOwnerID__c</fullName>
    <label>SplitOwnerID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>