objects/Opportunity_Split_Archive__b/fields/SplitType_MasterLabel__c.field-meta.xml
<CustomField>
    <fullName>SplitType_MasterLabel__c</fullName>
    <label>SplitType MasterLabel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>