objects/Opportunity_Split_Archive__b/fields/Upside_NARR__c.field-meta.xml
<CustomField>
    <fullName>Upside_NARR__c</fullName>
    <label>Upside NARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>