objects/Opportunity_Split_Archive__b/fields/User_Level_4__c.field-meta.xml
<CustomField>
    <fullName>User_Level_4__c</fullName>
    <label>User Level 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>